kubernetes/apps/home-automation/zigbee2mqtt/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
      - image: koenkk/zigbee2mqtt:1.35.3
        name: zigbee2mqtt
        resources:
          limits:
            memory: "2Gi"
          requests:
            memory: "128Mi"
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
        securityContext:
          privileged: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-data
